  was removed. MediaWiki support for PHPUnit 4 ended with the removal of HHVM
  support.
* The PHPUnit6And8Compat class, used to provide compatibility with PHPUnit 6,
  was removed without deprecation. This class was introduced during the
  upgrade to PHPUnit 8, but never used.
* ParserCache::getETag has been deprecated, instead build suitable etag
  explicitly.
* …

=== Other changes in 1.36 ===
* The 'tidy' key in ParserOptions (used in the parser cache) has been removed.
  It has had no effect since 1.35.
* A future release of MediaWiki will make {{=}} a built-in parser function,
  for use when automatically escaping the `=` character in template arguments.
  A tracking category and parser warning have been added to this release when
  {{=}} is used and it expands to something other than `=`.
* The implementation of TestFileReader::read has been changed to use
  Parsoid's parser test file parser.  This should be compatible with
  existing code, but it only supports version 2 of the test file
  specification and may be more strict when parsing invalid input,
  including duplicate tests.
* The SkinLessImportPaths attribute was added, allowing skins to add a
  directory to the import path for LESS stylesheets. Skins can use this
  to provide a custom version of mediawiki.skin.variables.less, setting
  skin-specific values for certain LESS variables.
* The interaction between ContentHandler::getParserOutputForIndexing()
  and ContentHandler::getDataForSearchIndex() has been clarified
  (the latter should only be called with the result of the former).
  Extensions may override getParserOutputForIndexing() to skip generating HTML,
  which may improve indexing performance. (The default implementation
  still generates HTML, and getDataForSearchIndex() implementations can still
  rely on it if they do not override getParserOutputForIndexing().)
* …

== Compatibility ==
MediaWiki 1.36 requires PHP 7.2.22 or later, and the following PHP extensions:

* ctype
* dom